# back-end

./: .bandit  Dockerfile  Makefile  Procfile  README.md  docker-compose-sample.yml  entrypoint.sh  manage.py  pyenv.cfg  pyproject.toml
backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/: urls.py
backend/app/: admin.py  api.py  api_urls.py  models.py  serializers.py  utils.py
backend/app/migrations/: 0001_initial.py  0002_auto_20210505_1945.py  0003_auto_20210505_2024.py  0004_auto_20210505_2117.py
docker-entrypoint-initdb.d/: initdb.sql
fixtures/: development.json.bz2
